apps/immich/templates/public-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-public-proxy
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-redirect-https@kubernetescrd"
    traefik.ingress.kubernetes.io/frontend-entry-points: "http,https"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  rules:
  - host: "photos.kelbert.fr"
    http:
      paths:
      - path: "/share"
        pathType: Prefix
        backend:
          service:
            name: immich-public-proxy
            port:
              number: 3000
  tls:
  - hosts:
    - "photos.kelbert.fr"
    secretName: "photos-kelbert-fr-tls"
